overflow -x fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,17 +4,19 @@
 @tailwind utilities;
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: "Barlow Condensed";
+  
 }
 
 html,
 body,
 #root {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: clip;
 }
 
 body {
